# gpx_to_graph

./: .dockerignore  .gitignore  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.proxy.yml  docker-compose.yml  ff_acp_20_paris_dieppe_2023-16059614-1776064583-488.gpx
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  pow.rs
src/auth/: db.rs  handlers.rs  mod.rs  strava.rs
src/col/: auth.rs  climb.rs  db.rs  mod.rs  routes.rs  strava.rs
src/meteo/: handlers.rs  mod.rs  weather.rs  wind.rs
src/ravito/: handlers.rs  mod.rs  overpass.rs
src/roulette/: db.rs  engine.rs  handlers.rs  mod.rs
src/strava_stats/: error.rs  mod.rs  state.rs
src/strava_stats/models/: activity.rs  mod.rs
src/strava_stats/routes/: activities.rs  dashboard.rs  mod.rs  performance.rs  training.rs  upload.rs  weather.rs
src/strava_stats/services/: csv_parser.rs  dashboard.rs  filter.rs  mod.rs  performance.rs  training.rs  weather.rs
src/toolkit/: mod.rs
src/trace/: mod.rs  routes.rs  session.rs
src/trip/: auth.rs  db.rs  mod.rs  routes.rs
static/: theme-switcher.js  themes.css
static/auth/: app.css  index.html
static/col/: index.html
static/meteo/: app.css  index.html
static/ravito/: app.css  index.html
static/roulette/: app.css  daily.html  index.html
static/strava_stats/: index.html
static/toolkit/: app.css  index.html
static/trace/: index.html  manifest.json  sw.js  tracker.html  view.html
static/trip/: app.css  index.html
