[package]
name = "gpx_to_graph"
version = "0.1.0"
edition = "2024"
default-run = "gpx_to_graph"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gpx = "0.10"
image = "0.24"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "point_series", "full_palette", "ab_glyph"] }

# Server dependencies (optional)
axum = { version = "0.8", features = ["multipart", "ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
base64 = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tower-http = { version = "0.6", features = ["trace", "fs", "cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
bcrypt = { version = "0.17", optional = true }
rand = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
futures-util = { version = "0.3", optional = true }
csv = { version = "1.3", optional = true }
thiserror = { version = "2", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = []
server = [
    "dep:axum", "dep:tokio", "dep:base64", "dep:serde", "dep:serde_json",
    "dep:tower-http", "dep:tracing", "dep:tracing-subscriber",
    "dep:chrono", "dep:rusqlite", "dep:reqwest", "dep:bcrypt", "dep:rand",
    "dep:futures-util", "dep:csv", "dep:thiserror",
    "dep:sha2", "dep:hmac", "dep:uuid",
]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]
